@@ -53,6 +53,7 @@ enum
     BUY_LAND_RIGHTS_FLAG_UNOWN_CONSTRUCTION_RIGHTS,
     BUY_LAND_RIGHTS_FLAG_SET_FOR_SALE,
     BUY_LAND_RIGHTS_FLAG_SET_CONSTRUCTION_RIGHTS_FOR_SALE,
+    BUY_LAND_RIGHTS_FLAG_SET_OWNERSHIP_WITH_CHECKS, // Used in scenario editor
 };
 
 extern rct_string_id gParkName;
